Fix for terminal newlines
Emacs will now no longer print extra newlines in any of the terminal modes.

--- a/org-init.org
+++ b/org-init.org
@@ -82,6 +82,11 @@ Auto refresh dired, silently.
   (setq global-auto-revert-non-file-buffers t)
   (setq auto-revert-verbose nil)
 #+END_SRC
+Fix terminals giving extra newlines
+#+NAME: terminal-fix
+#+BEGIN_SRC emacs-lisp :tangle yes
+  (add-hook 'term-mode-hook 'toggle-truncate-lines)
+#+END_SRC
 ** Appearance
 Change how Emacs looks.
 *** Toolbars
