--- a/org-init.org
+++ b/org-init.org
@@ -519,6 +519,15 @@ https://github.com/justbur/emacs-which-key
     :config
     (which-key-mode t))
 #+END_SRC
+**** dired+
+An improvement on dired.
+https://www.emacswiki.org/emacs/DiredPlus
+#+NAME: dired+
+#+BEGIN_SRC emacs-lisp :tangle yes
+  (use-package dired+
+    :config
+    (define-key ctrl-x-map "d" 'diredp-dired-files))
+#+END_SRC
 ** EXWM
 Code for the X Emacs Window Manager (EXWM).
 https://github.com/ch11ng/exwm/wiki
