--- a/org-init.org
+++ b/org-init.org
@@ -1,3 +1,8 @@
+#+NAME: deadfa
+#+BEGIN_SRC emacs-lisp :tangle yes
+  (setq debug-on-error t)
+#+END_SRC
+
 * Configuration
 This is Kahr Kunne's Emacs configuration, using literate programming with org-babel.
 ** Personal information
@@ -363,7 +368,7 @@ https://github.com/abo-abo/ace-window
     :commands (ace-window)
     :bind (("C-x o" . ace-window))
     :config
-    (setq aw-keys '(?a ?s ?d ?f ?g ?h ? j ?k ?l))) 
+    (setq aw-keys '(?a ?s ?d ?f ?j ?k ?l ?; ?g ?h))) 
 #+END_SRC
 *** Project management
 **** magit
