--- a/org-init.org
+++ b/org-init.org
@@ -370,6 +370,17 @@ https://github.com/abo-abo/ace-window
     :config
     (setq aw-keys '(?a ?s ?d ?f ?j ?k ?l ?; ?g ?h))) 
 #+END_SRC
+**** windmove
+Move to a different window more easily.
+https://www.emacswiki.org/emacs/WindMove
+
+#+NAME: windmove
+#+BEGIN_SRC emacs-lisp :tangle yes
+  (global-set-key (kbd "s-<left>") 'windmove-left)
+  (global-set-key (kbd "s-<right>") 'windmove-right)
+  (global-set-key (kbd "s-<down>") 'windmove-down)
+  (global-set-key (kbd "s-<up>") 'windmove-up)
+#+END_SRC
 *** Project management
 **** magit
 Magit is an extremely powerful and pleasant Git interface for Emacs. If you use Git a lot, this package is pretty much a must.
