--- a/org-init.org
+++ b/org-init.org
@@ -275,15 +275,17 @@ https://github.com/noctuid/lispyville
     :config
     (add-hook 'lispy-mode-hook #'lispyville-mode))
 #+END_SRC
-**** jedi
+**** company-jedi
 Autocompletion for python
-#+NAME: jedi
+https://github.com/syohex/emacs-company-jedi
+
+#+NAME: company-jedi
 #+BEGIN_SRC emacs-lisp :tangle yes
+  (defun my/python-mode-hook ()
+    (add-to-list 'company-backends 'company-jedi))
   (use-package jedi
     :init
-    (add-hook 'python-mode-hook 'jedi:setup)
-    (add-hook 'python-mode-hook 'company-jedi)
-    (add-hook 'python-mode-hook 'ac-linum-workaround))
+    (add-hook 'python-mode-hook 'my/python-mode-hook)
 #+END_SRC
 **** web-mode
 Major-mode for all the web-related stuff.
